# mangbralouma

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
src/mangbralouma/: __init__.py  __main__.py  main.py  web.py
src/mangbralouma/templates/: index.html
tests/: test_main.py  test_web.py
