[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mangbralouma"
version = "0.1.0"
description = "Base de projet Python pour mangbralouma"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "mangbralouma", email = "valamameite@gmail.com" }
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
