[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mangbralouma"
version = "0.1.0"
description = "Base de projet Python pour mangbralouma"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "mangbralouma", email = "valamameite@gmail.com" }
]

[project.optional-dependencies]
test = ["pytest>=8.0"]

[project.scripts]
mangbralouma = "mangbralouma.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
